<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="42dp"
        android:paddingBottom="42dp">

        <LinearLayout
            android:id="@+id/formContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:paddingBottom="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="488dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lianxifangshi"
                    android:textColor="#666666"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/contactEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:autofillHints="@null"
                    android:background="@null"
                    android:hint="@string/lianxifangshi2"
                    android:inputType="text"
                    android:paddingVertical="14dp"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textSize="14sp"
                    tools:ignore="TextFields" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fankuiyijian"
                    android:textColor="#666666"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/feedbackEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="@null"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/fankuiyijian2"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="100"
                    android:textColor="#666666"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/feedbackCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/100"
                    android:textColor="#666666"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="42dp"
            android:backgroundTint="#2879FE"
            app:cardCornerRadius="1000dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formContainer"
            app:layout_constraintWidth_max="488dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingVertical="12dp"
                android:text="@string/lijitijiao"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
