<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="42dp">

        <TextView
            android:id="@+id/statusBarWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textSize="0sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonYonghuxieyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yonghuxieyi"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonYinsixieyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yinsixieyi"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonYijianfankui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yijianfankui"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonDangqianbanben"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="12dp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/buttonDangqianbanbenText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dangqianbanben"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
