<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="488dp">

        <TextView
            android:id="@+id/statusBarWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textSize="0sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/customFont0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_font_0"
                android:textColor="#EE869B"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/customFont1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_font_1"
                android:textColor="#F8CDD5"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextZiti"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@null"
                    android:background="@null"
                    android:hint="@string/shuruwenzijikeshengcheng"
                    android:inputType="text"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="14dp"
                    android:textColor="#000000"
                    tools:ignore="LabelFor" />

                <ImageView
                    android:id="@+id/editTextZitiSubmit"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:paddingHorizontal="6dp"
                    android:src="@drawable/ic_write"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_radius_0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@null"
            app:tabGravity="fill"
            app:tabIndicatorColor="#FA678B"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="#FA678B"
            app:tabTextAppearance="@style/TabTextStyle"
            app:tabTextColor="#7E7E7E"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
